<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listLV"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@null"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/menu"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:gravity="center" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="5dip"
                    android:contentDescription="@null"
                    android:src="@drawable/logo" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/myScheduleTaskParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:gravity="left" >

                <TextView
                    android:id="@+id/myScheduleTaskText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/my_schedule_task"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/myScheduleTaskView"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="0dp"
                android:background="#e2e2e2" />

            <RelativeLayout
                android:id="@+id/allTaskParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null" >

                <TextView
                    android:id="@+id/allTaskText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/all_tasks"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/allTaskView"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="0dp"
                android:background="#e2e2e2" />

            <RelativeLayout
                android:id="@+id/editTaskParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null" >

                <TextView
                    android:id="@+id/editTaskText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/edit_tasks"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/editTaskView"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="0dp"
                android:background="#e2e2e2" />

            <RelativeLayout
                android:id="@+id/editScheduleParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null" >

                <TextView
                    android:id="@+id/editScheduleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/edit_schedule"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/editScheduleView"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="0dp"
                android:background="#e2e2e2" />

            <RelativeLayout
                android:id="@+id/roleParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null" >

                <TextView
                    android:id="@+id/roleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/edit_role"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/view_settings"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#e2e2e2" />

            <RelativeLayout
                android:id="@+id/editUserParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null" >

                <TextView
                    android:id="@+id/editUserText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/edit_user"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/editUserView"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#e2e2e2" />

            <RelativeLayout
                android:id="@+id/viewScheduleParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null" >

                <TextView
                    android:id="@+id/viewScheduleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/view_schedule"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/viewScheduleView"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#e2e2e2" />

            <RelativeLayout
                android:id="@+id/myProfileParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null" >

                <TextView
                    android:id="@+id/myProfileText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/my_profile"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/myProfileView"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#e2e2e2" />

            <RelativeLayout
                android:id="@+id/tutorialParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null" >

                <TextView
                    android:id="@+id/tutorialText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/tutorials"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/tutorialView"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#e2e2e2" />

            <RelativeLayout
                android:id="@+id/signOutParent"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null" >

                <TextView
                    android:id="@+id/signOutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/sign_out"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/signOutView"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#e2e2e2" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>